Source/WebCore/rendering/svg/RenderSVGRoot.cpp
@@ -137,13 +137,20 @@ bool RenderSVGRoot::isEmbeddedThroughSVGImage() const
     return true;
 }
 
-static inline bool isEmbeddedThroughFrameContainingSVGDocument(const Frame* frame)
+bool RenderSVGRoot::isEmbeddedThroughFrameContainingSVGDocument() const
 {
-    ASSERT(frame);
-    ASSERT(frame->document());
+    if (!node())
+        return false;
+
+    Frame* frame = node()->document()->frame();
+    if (!frame)
+        return false;
+
     // If our frame has an owner renderer, we're embedded through eg. object/embed/iframe,
     // but we only negotiate if we're in an SVG document.
-    return !frame->ownerRenderer() || !frame->document()->isSVGDocument();
+    if (!frame->ownerRenderer())
+        return false;
+    return frame->document()->isSVGDocument();
 }
 
 LayoutUnit RenderSVGRoot::computeReplacedLogicalWidth(bool includeMaxWidth) const
@@ -158,7 +165,7 @@ LayoutUnit RenderSVGRoot::computeReplacedLogicalWidth(bool includeMaxWidth) cons
     if (!frame)
         return replacedWidth;
 
-    if (isEmbeddedThroughFrameContainingSVGDocument(frame))
+    if (!isEmbeddedThroughFrameContainingSVGDocument())
         return replacedWidth;
 
     RenderPart* ownerRenderer = frame->ownerRenderer();
@@ -203,13 +210,14 @@ LayoutUnit RenderSVGRoot::computeReplacedLogicalHeight() const
     if (!frame)
         return replacedHeight;
 
-    if (isEmbeddedThroughFrameContainingSVGDocument(frame))
+    if (!isEmbeddedThroughFrameContainingSVGDocument())
         return replacedHeight;
 
     RenderPart* ownerRenderer = frame->ownerRenderer();
+    ASSERT(ownerRenderer);
+
     RenderStyle* ownerRendererStyle = ownerRenderer->style();
     ASSERT(ownerRendererStyle);
-    ASSERT(frame->contentRenderer());
 
     Length ownerHeight = ownerRendererStyle->height();
     if (ownerHeight.isAuto())
