Source/WebCore/rendering/svg/RenderSVGRoot.h
@@ -40,6 +40,7 @@ public:
     virtual ~RenderSVGRoot();
 
     bool isEmbeddedThroughSVGImage() const;
+    bool isEmbeddedThroughFrameContainingSVGDocument() const;
 
     virtual void computeIntrinsicRatioInformation(FloatSize& intrinsicRatio, bool& isPercentageIntrinsicSize) const;
     const RenderObjectChildList* children() const { return &m_children; }
